force-app/main/default/objects/LocationResource__c/LocationResource__c.object-meta.xml
<CustomObject>
    <label>Location Resource</label>
    <nameField>
        <label>Location Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>