force-app/main/default/objects/LocationResource__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Location__r.AccountName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>