force-app/main/default/objects/LocationResource__c/fields/AgesServed__c.field-meta.xml
<CustomField>
    <fullName>AgesServed__c</fullName>
    <label>Ages Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infants (0-1)</fullName>
            </value>
            <value>
                <fullName>Pre-K (1-5)</fullName>
            </value>
            <value>
                <fullName>Children (6-12)</fullName>
            </value>
            <value>
                <fullName>Teenagers (13-19)</fullName>
            </value>
            <value>
                <fullName>Adults (20-55)</fullName>
            </value>
            <value>
                <fullName>Seniors (55+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>