force-app/main/default/objects/LocationResource__c/fields/EligibilityCCAP__c.field-meta.xml
<CustomField>
    <fullName>EligibilityCCAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility CCAP</label>
    <type>Checkbox</type>
</CustomField>