force-app/main/default/objects/LocationResource__c/fields/EligibilityDescription__c.field-meta.xml
<CustomField>
    <fullName>EligibilityDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>