force-app/main/default/objects/LocationResource__c/fields/EligibilityMedicaid__c.field-meta.xml
<CustomField>
    <fullName>EligibilityMedicaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Medicaid</label>
    <type>Checkbox</type>
</CustomField>