force-app/main/default/objects/LocationResource__c/fields/EligibilitySNAP__c.field-meta.xml
<CustomField>
    <fullName>EligibilitySNAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility SNAP</label>
    <type>Checkbox</type>
</CustomField>