force-app/main/default/objects/LocationResource__c/fields/EligibilityTANF__c.field-meta.xml
<CustomField>
    <fullName>EligibilityTANF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility TANF</label>
    <type>Checkbox</type>
</CustomField>