force-app/main/default/objects/LocationResource__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>