force-app/main/default/objects/LocationResource__c/fields/FirstPointofContactEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstPointofContactEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Point of Contact Email</label>
    <type>Email</type>
</CustomField>