force-app/main/default/objects/LocationResource__c/fields/FirstPointOfContactName__c.field-meta.xml
<CustomField>
    <fullName>FirstPointOfContactName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Point Of Contact Name</label>
    <type>TextArea</type>
</CustomField>