force-app/main/default/objects/LocationResource__c/fields/FirstPointofContactPhone__c.field-meta.xml
<CustomField>
    <fullName>FirstPointofContactPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Point of Contact Phone</label>
    <type>Phone</type>
</CustomField>