force-app/main/default/objects/LocationResource__c/fields/FirstPointOfContactTitle__c.field-meta.xml
<CustomField>
    <fullName>FirstPointOfContactTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Point Of Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>