force-app/main/default/objects/LocationResource__c/fields/FridayClose__c.field-meta.xml
<CustomField>
    <fullName>FridayClose__c</fullName>
    <label>FridayClose</label>
    <type>Time</type>
</CustomField>