force-app/main/default/objects/LocationResource__c/fields/FridayOpen__c.field-meta.xml
<CustomField>
    <fullName>FridayOpen__c</fullName>
    <label>FridayOpen</label>
    <type>Time</type>
</CustomField>