force-app/main/default/objects/LocationResource__c/fields/Geography_Served__c.field-meta.xml
<CustomField>
    <fullName>Geography_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Geography Served</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>