force-app/main/default/objects/LocationResource__c/fields/IncomeEligibility__c.field-meta.xml
<CustomField>
    <fullName>IncomeEligibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Income Eligibility URL</label>
    <type>Url</type>
</CustomField>