force-app/main/default/objects/LocationResource__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location record to which the location resource is related to</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Resources</relationshipLabel>
    <relationshipName>Location_Resources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>