force-app/main/default/objects/LocationResource__c/fields/MondayClose__c.field-meta.xml
<CustomField>
    <fullName>MondayClose__c</fullName>
    <label>MondayClose</label>
    <type>Time</type>
</CustomField>