force-app/main/default/objects/LocationResource__c/fields/MondayOpen__c.field-meta.xml
<CustomField>
    <fullName>MondayOpen__c</fullName>
    <label>MondayOpen</label>
    <type>Time</type>
</CustomField>