force-app/main/default/objects/LocationResource__c/fields/NextSteps__c.field-meta.xml
<CustomField>
    <fullName>NextSteps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>