force-app/main/default/objects/LocationResource__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TimeOpen Notes</label>
    <type>TextArea</type>
</CustomField>