force-app/main/default/objects/LocationResource__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <formula>Location__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrgId</label>
    <type>Text</type>
</CustomField>