force-app/main/default/objects/LocationResource__c/fields/ResourceDescription__c.field-meta.xml
<CustomField>
    <fullName>ResourceDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>