force-app/main/default/objects/LocationResource__c/fields/SaturdayClose__c.field-meta.xml
<CustomField>
    <fullName>SaturdayClose__c</fullName>
    <label>SaturdayClose</label>
    <type>Time</type>
</CustomField>