force-app/main/default/objects/LocationResource__c/fields/SaturdayOpen__c.field-meta.xml
<CustomField>
    <fullName>SaturdayOpen__c</fullName>
    <label>SaturdayOpen</label>
    <type>Time</type>
</CustomField>