force-app/main/default/objects/LocationResource__c/fields/SecondPointofContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SecondPointofContactEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Point of Contact Email</label>
    <type>Email</type>
</CustomField>