force-app/main/default/objects/LocationResource__c/fields/SecondPointOfContactName__c.field-meta.xml
<CustomField>
    <fullName>SecondPointOfContactName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Point Of Contact Name</label>
    <type>TextArea</type>
</CustomField>