force-app/main/default/objects/LocationResource__c/fields/SecondPointofContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SecondPointofContactPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Point of Contact Phone</label>
    <type>Phone</type>
</CustomField>