force-app/main/default/objects/LocationResource__c/fields/SecondPointOfContactTitle__c.field-meta.xml
<CustomField>
    <fullName>SecondPointOfContactTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Point Of Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>