force-app/main/default/objects/LocationResource__c/fields/SiteServiceKeyUW__c.field-meta.xml
<CustomField>
    <fullName>SiteServiceKeyUW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UW SiteService Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>