force-app/main/default/objects/LocationResource__c/fields/SundayClose__c.field-meta.xml
<CustomField>
    <fullName>SundayClose__c</fullName>
    <label>SundayClose</label>
    <type>Time</type>
</CustomField>