force-app/main/default/objects/LocationResource__c/fields/SundayOpen__c.field-meta.xml
<CustomField>
    <fullName>SundayOpen__c</fullName>
    <label>SundayOpen</label>
    <type>Time</type>
</CustomField>