force-app/main/default/objects/LocationResource__c/fields/ThursdayClose__c.field-meta.xml
<CustomField>
    <fullName>ThursdayClose__c</fullName>
    <label>ThursdayClose</label>
    <type>Time</type>
</CustomField>