force-app/main/default/objects/LocationResource__c/fields/ThursdayOpen__c.field-meta.xml
<CustomField>
    <fullName>ThursdayOpen__c</fullName>
    <label>ThursdayOpen</label>
    <type>Time</type>
</CustomField>