force-app/main/default/objects/LocationResource__c/fields/TollFree__c.field-meta.xml
<CustomField>
    <fullName>TollFree__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TollFree</label>
    <type>Phone</type>
</CustomField>