force-app/main/default/objects/LocationResource__c/fields/TuesdayClose__c.field-meta.xml
<CustomField>
    <fullName>TuesdayClose__c</fullName>
    <label>TuesdayClose</label>
    <type>Time</type>
</CustomField>