force-app/main/default/objects/LocationResource__c/fields/TuesdayOpen__c.field-meta.xml
<CustomField>
    <fullName>TuesdayOpen__c</fullName>
    <label>TuesdayOpen</label>
    <type>Time</type>
</CustomField>