force-app/main/default/objects/LocationResource__c/fields/WednesdayClose__c.field-meta.xml
<CustomField>
    <fullName>WednesdayClose__c</fullName>
    <label>WednesdayClose</label>
    <type>Time</type>
</CustomField>