force-app/main/default/objects/LocationResource__c/fields/WednesdayOpen__c.field-meta.xml
<CustomField>
    <fullName>WednesdayOpen__c</fullName>
    <label>WednesdayOpen</label>
    <type>Time</type>
</CustomField>