force-app/main/default/objects/LocationResource__c/fields/WhatToBring__c.field-meta.xml
<CustomField>
    <fullName>WhatToBring__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What to bring</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>